src/test/resources/Parser/SyntaxErrors/FieldIdentifierCollision.front
class A {
    A a;
    int32 a;
}